--- a/src/features/event/edit/customize/customize.module.css
+++ b/src/features/event/edit/customize/customize.module.css
@@ -52,8 +52,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #090909;
-  opacity: 0.3;
+  background-color: #000000;
+  opacity: 0.6;
   border-radius: 3px;
 }
 
