--- a/src/styles/themes/blue.css
+++ b/src/styles/themes/blue.css
@@ -6,8 +6,8 @@
   --primary-color-dark: #1f2022;
   --primary-color-font: #fff;
 
-  --secondary-color: #0b73ff;
-  --secondary-color-light: #0b73ff;
+  --secondary-color: #0052BD;
+  --secondary-color-light: #0052BD;
   --secondary-color-dark: #05147d;
   --secondary-color-font: #fff;
 }
