--- a/src/styles/themes/red.css
+++ b/src/styles/themes/red.css
@@ -6,7 +6,7 @@
   --primary-color-dark: #1f2022;
   --primary-color-font: #fff;
 
-  --secondary-color: #fc1047;
+  --secondary-color: #E80238;
   --secondary-color-light: #fd7fa0;
   --secondary-color-dark: #db0c3e;
   --secondary-color-font: #fff;
